feat: implementa inscrição de participantes em eventos
